<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MFReceitas</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="adicionar">Adicionar</string>
    <string name="alterar">Alterar</string>
    <string name="cancelar">Cancelar</string>
    <string name="categoria">Categoria</string>
    <string name="codigo">Código</string>
    <string name="custoMedio">Custo Médio - R$</string>
    <string name="descricao">Descrição</string>
    <string name="excluir">Excluir</string>
    <string name="excluirIngrediente">Excluir Ingrediente</string>
    <string name="excluirPasso">Excluir Passo</string>
    <string name="informacoes">Informações</string>
    <string name="ingredientesModoPreparo">Ingredientes/Modo de Preparo</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="mais">+</string>
    <string name="marca">Marca</string>
    <string name="menos">-</string>
    <string name="modoPreparo">Modo de Preparo</string>
    <string name="msgCategoriaExiste">Essa categoria já está cadastrada.</string>
    <string name="msgMarcaExiste">Essa marca já está cadastrada.</string>
    <string name="msgProdutoExiste">Esse produto já está cadastrado.</string>
    <string name="msgUnidadeExiste">Essa unidade já está cadastrada.</string>
    <string name="descricaoCategoria">Descrição da Categoria</string>
    <string name="descricaoMarca">Descrição da Marca</string>
    <string name="descricaoProduto">Descrição do Produto</string>
    <string name="descricaoUnidade">Descrição da Unidade</string>
    <string name="msgDescricaoEmBranco">Preencha a descrição.</string>
    <string name="msgListaIngredientesVazia">A receita tem que ter pelo menos um ingrediente.</string>
    <string name="msgListaPassosVazia">A receita tem que ter pelo menos um passo.</string>
    <string name="novo">Novo</string>
    <string name="preco">Preço - R$</string>
    <string name="qtdMaiorZero">A quantidade deve ser maior do que zero.</string>
    <string name="quantidade">Quantidade</string>
    <string name="qtdPessoasServe">Quantidade de Pessoas que Serve</string>
    <string name="novo">Novo</string>
    <string name="passo">Passo</string>
    <string name="passos">Passos</string>
    <string name="produto">Produto</string>
    <string name="rs">R$</string>
    <string name="salvar">Salvar</string>
    <string name="salvarReceita">Salvar Receita</string>
    <string name="tempoCongelador">Tempo no Congelador</string>
    <string name="tempoForno">Tempo no Forno</string>
    <string name="tempoPreparo">Tempo de Preparo</string>
    <string name="unidade">Unidade</string>
    <string name="voltar">Voltar</string>
    
</resources>