<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/informacoes"
            android:background="@color/green"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp">
            
            <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1" >
	            <TextView
	                android:id="@+id/textView1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/descricao"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	            <TextView
	                android:id="@+id/lblDescricao"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10dp"
	                android:text=""
	                android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
			
            <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="wrap_content" 
	            android:layout_marginLeft="10dp"
	            android:layout_weight="1">
	            <TextView
	                android:id="@+id/textView3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/categoria"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	            <TextView
	                android:id="@+id/lblCategoria"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10dp"
	                android:text="@string/qtdPessoasServe"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp">
            
            <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1" >
	            <TextView
	                android:id="@+id/textView4"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/qtdPessoasServe"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	            <TextView
	                android:id="@+id/lblQtdPessoas"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10dp"
	                android:text=""
	                android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
			
            <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="wrap_content" 
	            android:layout_marginLeft="10dp"
	            android:layout_weight="1">
	            <TextView
	                android:id="@+id/textView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/tempoPreparo"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	            <TextView
	                android:id="@+id/lblTempoPreparo"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10dp"
	                android:text=""
	                android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp">
            
            <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1" >
	            <TextView
	                android:id="@+id/textView5"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/tempoForno"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	            <TextView
	                android:id="@+id/lblTempoForno"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10dp"
	                android:text=""
	                android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
			
            <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="wrap_content" 
	            android:layout_marginLeft="10dp"
	            android:layout_weight="1">
	            <TextView
	                android:id="@+id/textView6"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/tempoCongelador"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	            <TextView
	                android:id="@+id/lblTempoCongelador"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10dp"
	                android:text=""
	                android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
            
        </LinearLayout>
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp">
            
            <TextView
	                android:id="@+id/textView7"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/custoMedio"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	            <TextView
	                android:id="@+id/lblCustoMedio"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10dp"
	                android:text=""
	                android:textAppearance="?android:attr/textAppearanceMedium" />
		</LinearLayout>
		
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/ingredientes"
            android:background="@color/green"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <LinearLayout
	        android:id="@+id/linearIngedientes"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="10dp">
	            
            
		</LinearLayout>
		<TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/modoPreparo"
            android:background="@color/green"
            android:textAppearance="?android:attr/textAppearanceLarge" />
           <LinearLayout
	        android:id="@+id/linearModoPreparo"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="10dp">
	            
            
		</LinearLayout>

        
	</LinearLayout> 
      
    
   

</ScrollView>