<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
	    android:id="@+id/lblInformacoes"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:background="@color/green"
	    android:text="@string/informacoes"
	    android:gravity="center"
	    android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
            
            <ImageView
	            android:id="@+id/imgReceita"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/abs__ab_bottom_solid_inverse_holo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descricao"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edtDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custoMedio"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edtCustoMedio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
            
            <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp" >
	
	            <TextView
	                android:id="@+id/textView16"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/categoria"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	
	            <Spinner
	                android:id="@+id/spinnerCategoria"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:layout_marginLeft="10dp" />
	
	        </LinearLayout>

        </LinearLayout>

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/qtdPessoasServe"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="@string/tempoPreparo"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
            android:layout_weight="1">
            <EditText
	                android:id="@+id/edtQtdPessoas"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:ems="10"
	                android:inputType="number" />
	
	            <Button
	                android:id="@+id/btnAddQtdPessoas"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:onClick="btnAdicionarClick"
	                android:text="@string/mais" />
	
	            <Button
	                android:id="@+id/btnDimQtdPessoas"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:onClick="btnDiminuirClick"
	                android:text="@string/menos" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
            android:layout_weight="1"
            android:paddingLeft="5dp">
	            <EditText
	                android:id="@+id/edtTempoPreparo"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:ems="10"
	                android:inputType="number" />
	
	            <Button
	                android:id="@+id/btnAddTempoPreparo"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:onClick="btnAdicionarClick"
	                android:text="@string/mais" />
	
	            <Button
	                android:id="@+id/btnDimTempoPreparo"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:onClick="btnDiminuirClick"
	                android:text="@string/menos" />
        </LinearLayout>
        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tempoForno"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="@string/tempoCongelador"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
            android:layout_weight="1">
	            
            <EditText
	                android:id="@+id/edtTempoForno"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:ems="10"
	                android:inputType="number" />
	
	            <Button
	                android:id="@+id/btnAddTempoForno"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:onClick="btnAdicionarClick"
	                android:text="@string/mais" />
	
	            <Button
	                android:id="@+id/btnDimTempoForno"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:onClick="btnDiminuirClick"
	                android:text="@string/menos" />
	          
       </LinearLayout>
       
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
            android:layout_weight="1">
	            
            <EditText
	                android:id="@+id/edtTempoCongelador"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:ems="10"
	                android:inputType="number" />
	
	            <Button
	                android:id="@+id/btnAddTempoCongelador"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:onClick="btnAdicionarClick"
	                android:text="@string/mais" />
	
	            <Button
	                android:id="@+id/btnDimTempoCongelador"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:onClick="btnDiminuirClick"
	                android:text="@string/menos" />
	          
       </LinearLayout>
  </TableRow>

    <TextView
	    android:id="@+id/lblIngredientes"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:padding="10dp"
	    android:background="@color/green"
	    android:text="@string/ingredientesModoPreparo"
	    android:gravity="center"
	    android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" 
        android:layout_marginLeft="10dp">
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
            android:layout_weight="1">
            <TextView
	            android:id="@+id/textView7"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/produto"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <Spinner
	            android:id="@+id/spinnerProduto"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content" 
	            android:layout_weight="1"/>
	            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
            android:layout_weight="1"
            android:paddingLeft="5dp">
	        
            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unidade"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinnerUnidadeProduto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:layout_marginLeft="5dp"/>
	            
        </LinearLayout>
        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" 
        android:layout_marginLeft="10dp">
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
            android:layout_weight="1">
            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marca"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinnerMarcaProduto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:layout_marginLeft="5dp"/>
	            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
            android:layout_weight="1"
            android:paddingLeft="5dp">
	        
            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preco"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
	            android:id="@+id/edtPrecoProduto"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="numberDecimal" />
	            
        </LinearLayout>
        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" 
        android:layout_marginLeft="10dp">
        
         <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
            android:layout_weight="1">
        	<TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantidade"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
	            android:id="@+id/edtQtdProduto"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="number" />
			<Button
	            android:id="@+id/btnAddQtdProduto"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="btnAdicionarClick"
	            android:text="@string/mais" />
				
			<Button
	            android:id="@+id/btnDimQtdProduto"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="btnDiminuirClick"
	            android:text="@string/menos" />
	            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:orientation="vertical">
	        
            <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/passo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edtPasso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textMultiLine" />
	            
        </LinearLayout>
        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" 
        android:layout_marginLeft="10dp">
        
        <Button
            android:id="@+id/btnAdicionarProduto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnAdicionarProdutoClick"
            android:text="@string/adicionar" />
        
        <Button
            android:id="@+id/btnAdicionarPasso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="btnAdicionarPassoClick"
            android:layout_weight="1"
            android:text="@string/adicionar" />
        
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" 
        android:layout_marginLeft="10dp">
        
        <ListView
            android:id="@+id/listItens"
            android:layout_width="0dp"
            android:layout_height="match_parent" 
            android:layout_weight="1">
        </ListView>

        <ListView
            android:id="@+id/listPassos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">
        </ListView>
    </TableRow>
</TableLayout>